tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"if true { echo 10 }\"))"
---
[
    (
        Statement(
            (
                IfCondition(
                    (
                        "if",
                        0..2,
                    ),
                    (
                        IfCondition(
                            (
                                Boolean(
                                    (
                                        true,
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                            (
                                Block(
                                    [
                                        (
                                            Echo(
                                                (
                                                    "echo",
                                                    10..14,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            10.0,
                                                            15..17,
                                                        ),
                                                    ),
                                                    15..17,
                                                ),
                                            ),
                                            10..17,
                                        ),
                                    ],
                                ),
                                8..19,
                            ),
                        ),
                        3..19,
                    ),
                    None,
                ),
                0..19,
            ),
        ),
        0..19,
    ),
]
