tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"if true { echo 10 } else {}\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                IfCondition(
                    (),
                    IfCondition(
                        Boolean(
                            True,
                        ),
                        Block(
                            (),
                            [
                                Statement(
                                    Echo(
                                        (),
                                        Number(
                                            10.0,
                                        ),
                                    ),
                                    None,
                                ),
                            ],
                            (),
                        ),
                    ),
                    Some(
                        Else(
                            (),
                            Block(
                                (),
                                [],
                                (),
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
