tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\n        if true: echo 10\n        else: echo 20\n    \").unwrap()"
---
Statement(
    [
        IfCondition(
            InlineIfCondition(
                Boolean(
                    true,
                ),
                Echo(
                    Number(
                        10.0,
                    ),
                ),
            ),
            Some(
                InlineElse(
                    Echo(
                        Number(
                            20.0,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
