tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-6.snap
---
source: tests/grammar/alpha034.rs
expression: "semantic_tokens_from_ast(&parse(r#\"\nfun bar(a: Text) {\n    if true {\n    }\n}\n    \"#).0)"
---
[
    (
        5,
        1..4,
    ),
    (
        0,
        5..8,
    ),
    (
        7,
        9..10,
    ),
    (
        8,
        10..16,
    ),
    (
        5,
        24..26,
    ),
    (
        5,
        27..31,
    ),
]
