tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"if true {}\"))"
---
[
    (
        Statement(
            (
                IfCondition(
                    (
                        "if",
                        0..2,
                    ),
                    (
                        IfCondition(
                            (
                                Boolean(
                                    (
                                        true,
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                            (
                                Block(
                                    [],
                                ),
                                8..10,
                            ),
                        ),
                        3..10,
                    ),
                    None,
                ),
                0..10,
            ),
        ),
        0..10,
    ),
]
