tests/grammar/snapshots/r#mod__grammar__alpha034__import-10.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"import { var1\")"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportSpecific(
                            [
                                (
                                    "var1",
                                    9..13,
                                ),
                            ],
                        ),
                        7..13,
                    ),
                    (
                        "from",
                        13..14,
                    ),
                    (
                        "",
                        13..14,
                    ),
                ),
                0..13,
            ),
        ],
    ),
    [
        Simple {
            span: 13..14,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "}",
                    ),
                ),
            },
            found: None,
            label: None,
        },
        Simple {
            span: 13..14,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "from",
                    ),
                ),
            },
            found: None,
            label: None,
        },
        Simple {
            span: 13..14,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "\"",
                    ),
                ),
            },
            found: None,
            label: None,
        },
    ],
)
