tests/grammar/snapshots/r#mod__grammar__alpha034__import-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"import {} \\\"path/to/module\\\"\").unwrap()"
---
[
    (
        Import(
            (
                ImportSpecific(
                    [],
                ),
                7..9,
            ),
            (
                "path/to/module",
                11..25,
            ),
        ),
        0..26,
    ),
]
