tests/grammar/snapshots/r#mod__grammar__alpha034__import-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(\"import { var1 } from \\\"path/to/module\\\"\")"
---
[
    (
        Import(
            (
                false,
                0..6,
            ),
            (
                "import",
                0..6,
            ),
            (
                ImportSpecific(
                    [
                        (
                            "var1",
                            9..13,
                        ),
                    ],
                ),
                7..15,
            ),
            (
                "from",
                16..20,
            ),
            (
                "path/to/module",
                22..36,
            ),
        ),
        0..37,
    ),
]
