tests/grammar/snapshots/r#mod__grammar__alpha034__import-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"import { var1, var2 } \\\"path/to/module\\\"\").unwrap()"
---
Import(
    ImportSpecific(
        [
            "var1",
            "var2",
        ],
    ),
    "path/to/module",
)
